force-app/main/default/objects/Change__c/fields/RemittanceTotalAmount2_del__c.field-meta.xml
<CustomField>
    <fullName>RemittanceTotalAmount2_del__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>送金先2_送金額合計(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>