force-app/main/default/objects/Change__c/fields/RenovationCompany__c.field-meta.xml
<CustomField>
    <fullName>RenovationCompany__c</fullName>
    <label>（不要）リフォーム会社ＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>