force-app/main/default/objects/Change__c/fields/RenovationEndStatus__c.field-meta.xml
<CustomField>
    <fullName>RenovationEndStatus__c</fullName>
    <label>（不要）リフォーム終了状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>リフォーム期間延長</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>