force-app/main/default/objects/Change__c/fields/RepairScreenCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>RepairScreenCreatedBy__c</fullName>
    <label>（不要）修繕画面作成者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>