force-app/main/default/objects/Change__c/fields/ResidentChangeCharges__c.field-meta.xml
<CustomField>
    <fullName>ResidentChangeCharges__c</fullName>
    <label>入居者変更手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>