force-app/main/default/objects/Change__c/fields/ResidentChangeChargesTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ResidentChangeChargesTaxCategory__c</fullName>
    <label>入居者変更手数料税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>内税</fullName>
            </value>
            <value>
                <fullName>非課税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>