force-app/main/default/objects/Change__c/fields/ResidentChangeChargeTaxCategory__c.field-meta.xml
<CustomField>
    <fullName>ResidentChangeChargeTaxCategory__c</fullName>
    <label>入居者変更料税区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxClass</valueSetName>
    </valueSet>
</CustomField>