force-app/main/default/objects/Change__c/fields/RetireDate__c.field-meta.xml
<CustomField>
    <fullName>RetireDate__c</fullName>
    <label>退職日</label>
    <type>Date</type>
</CustomField>