force-app/main/default/objects/Change__c/fields/RetiredPersonListArriveDate__c.field-meta.xml
<CustomField>
    <fullName>RetiredPersonListArriveDate__c</fullName>
    <label>退職者リスト着日</label>
    <type>Date</type>
</CustomField>