force-app/main/default/objects/Change__c/fields/SealSendRequestDate__c.field-meta.xml
<CustomField>
    <fullName>SealSendRequestDate__c</fullName>
    <label>（不要）捺印・送付依頼日</label>
    <type>Date</type>
</CustomField>