force-app/main/default/objects/Change__c/fields/SecondaryChecker__c.field-meta.xml
<CustomField>
    <fullName>SecondaryChecker__c</fullName>
    <label>（不要）二次チェック者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>