force-app/main/default/objects/Change__c/fields/SelfPayAmount__c.field-meta.xml
<CustomField>
    <fullName>SelfPayAmount__c</fullName>
    <label>個人負担金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>