force-app/main/default/objects/Change__c/fields/SelfPayApprover__c.field-meta.xml
<CustomField>
    <fullName>SelfPayApprover__c</fullName>
    <label>（不要）個人負担承諾者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>