force-app/main/default/objects/Change__c/fields/SelfPayConsentDate__c.field-meta.xml
<CustomField>
    <fullName>SelfPayConsentDate__c</fullName>
    <label>個人負担承諾日</label>
    <type>Date</type>
</CustomField>