force-app/main/default/objects/Change__c/fields/ServiceContract__c.field-meta.xml
<CustomField>
    <fullName>ServiceContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>（不要）サービス契約</label>
    <referenceTo>ServiceContractCancel__c</referenceTo>
    <relationshipLabel>入替</relationshipLabel>
    <relationshipName>ChangepLF7</relationshipName>
    <type>Lookup</type>
</CustomField>