force-app/main/default/objects/Change__c/fields/SNTArriveChangeCharges__c.field-meta.xml
<CustomField>
    <fullName>SNTArriveChangeCharges__c</fullName>
    <label>【SNT受領】入替手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>