force-app/main/default/objects/Change__c/fields/SNTArriveCleanArrangeFee__c.field-meta.xml
<CustomField>
    <fullName>SNTArriveCleanArrangeFee__c</fullName>
    <label>【SNT受領】清掃手配費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>