force-app/main/default/objects/Change__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>申請待ち</fullName>
            </value>
            <value>
                <fullName>申請確認中</fullName>
            </value>
            <value>
                <fullName>条件確認中</fullName>
            </value>
            <value>
                <fullName>見積り待ち</fullName>
            </value>
            <value>
                <fullName>見積り確認中</fullName>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>再査中</fullName>
                <isActive>false</isActive>
                <label>再査中</label>
            </value>
            <value>
                <fullName>決裁申請中</fullName>
                <isActive>false</isActive>
                <label>決裁申請中</label>
            </value>
            <value>
                <fullName>申請受付</fullName>
                <isActive>false</isActive>
                <label>申請受付</label>
            </value>
            <value>
                <fullName>見積り内容確認中</fullName>
                <isActive>false</isActive>
                <label>見積り内容確認中</label>
            </value>
            <value>
                <fullName>請求書待ち</fullName>
                <isActive>false</isActive>
                <label>請求書待ち</label>
            </value>
            <value>
                <fullName>退去手続き</fullName>
                <isActive>false</isActive>
                <label>退去手続き</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>