force-app/main/default/objects/Change__c/fields/TestFaxSendDate__c.field-meta.xml
<CustomField>
    <fullName>TestFaxSendDate__c</fullName>
    <label>（不要）テストFAX送付日</label>
    <type>Date</type>
</CustomField>