force-app/main/default/objects/Change__c/fields/TransfererAccount3_del__c.field-meta.xml
<CustomField>
    <fullName>TransfererAccount3_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金元口座3</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>ChangeBankAccountRelation43_del</relationshipName>
    <type>Lookup</type>
</CustomField>