force-app/main/default/objects/Change__c/fields/WaitingForInvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>WaitingForInvoiceStatus__c</fullName>
    <description>「請求書待ち」フェーズの子フェーズとして使用</description>
    <label>請求書待ち（詳細ステータス）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>データ処理待ち</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>