force-app/main/default/objects/Change__c/fields/WitnessStaff__c.field-meta.xml
<CustomField>
    <fullName>WitnessStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>立会担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ChangeContactRelation12</relationshipName>
    <type>Lookup</type>
</CustomField>