force-app/main/default/objects/Change__c/recordTypes/Leave.recordType-meta.xml
<RecordType>
    <fullName>Leave</fullName>
    <active>true</active>
    <label>入替(退去)</label>
</RecordType>