force-app/main/default/objects/Change__c/recordTypes/Move.recordType-meta.xml
<RecordType>
    <fullName>Move</fullName>
    <active>true</active>
    <label>入替(入居)</label>
</RecordType>