force-app/main/default/objects/Change__c/validationRules/ArrangeManagementChargeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>ArrangeManagementChargeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL(  ArrangeManagementCharge__c   )) , ISBLANK( TEXT(   ArrangeManagementChargeTaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ArrangeManagementChargeTaxCategory__c</errorDisplayField>
    <errorMessage>清掃・修繕業務手配管理費税区分を入力してください</errorMessage>
</ValidationRule>