force-app/main/default/objects/Change__c/validationRules/CleanRepairCostTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>CleanRepairCostTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( CleaRepairCost__c  )) , ISBLANK( TEXT(  CleanRepairCostTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>CleanRepairCostTaxCategory__c</errorDisplayField>
    <errorMessage>清掃・修繕費用税区分を入力してください</errorMessage>
</ValidationRule>