force-app/main/default/objects/Change__c/validationRules/KeyExchangeCostTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>KeyExchangeCostTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( KeyExchangeCost__c )) , ISBLANK( TEXT( KeyExchangeCostTaxCategory__c ) ) )</errorConditionFormula>
    <errorDisplayField>KeyExchangeCostTaxCategory__c</errorDisplayField>
    <errorMessage>鍵交換費用税区分を入力してください</errorMessage>
</ValidationRule>