force-app/main/default/objects/Change__c/validationRules/OtherBillingTaxCategory1.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory1</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount1__c  )) , ISBLANK( TEXT(  OtherBillingTaxCategory1__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherBillingTaxCategory1__c</errorDisplayField>
    <errorMessage>その他1請求税区分を入力してください</errorMessage>
</ValidationRule>