force-app/main/default/objects/Change__c/validationRules/OtherBillingTaxCategory2.validationRule-meta.xml
<ValidationRule>
    <fullName>OtherBillingTaxCategory2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( OtherBillingAmount2__c  )) , ISBLANK( TEXT(  OtherBillingTaxCategory2__c  ) ) )</errorConditionFormula>
    <errorDisplayField>OtherBillingTaxCategory2__c</errorDisplayField>
    <errorMessage>その他2請求税区分を入力してください</errorMessage>
</ValidationRule>