force-app/main/default/objects/Change__c/validationRules/ProcedureChargeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>ProcedureChargeTaxCategory</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNULL( ResidentChangeCharges__c  )) , ISBLANK( TEXT(  ProcedureChargeTaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ProcedureChargeTaxCategory__c</errorDisplayField>
    <errorMessage>入居者変更手数料税区分を入力してください</errorMessage>
</ValidationRule>