force-app/main/default/objects/Change__c/validationRules/ResidentChangeChargeTaxCategory.validationRule-meta.xml
<ValidationRule>
    <fullName>ResidentChangeChargeTaxCategory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNULL( ResidentChangeCharge__c )) , ISBLANK( TEXT(   ResidentChangeChargeTaxCategory__c  ) ) )</errorConditionFormula>
    <errorDisplayField>ResidentChangeChargeTaxCategory__c</errorDisplayField>
    <errorMessage>入居者変更料税区分を入力してください</errorMessage>
</ValidationRule>