force-app/main/default/objects/Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>IsLeaveCompleted__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>LeftEmployee__c</columns>
    <columns>LeaveScheduledDate__c</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <columns>Staff__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>