force-app/main/default/objects/Change__c/listViews/ChangeLeaveList.listView-meta.xml
<ListView>
    <fullName>ChangeLeaveList</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>NewResidentName__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>LeaveDate__c</columns>
    <columns>LeaveScheduledDate__c</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Change__c.Leave</value>
    </filters>
    <label>入替（退去）一覧</label>
</ListView>