force-app/main/default/objects/Change__c/listViews/ChangeMoveList.listView-meta.xml
<ListView>
    <fullName>ChangeMoveList</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>NewResidentName__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>LeftEmployee__c</columns>
    <columns>LeaveScheduledDate__c</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Change__c.Move</value>
    </filters>
    <label>入替（入居）一覧</label>
</ListView>