force-app/main/default/objects/Change__c/listViews/ChangeReconfirmRequestTeamCompleted.listView-meta.xml
<ListView>
    <fullName>ChangeReconfirmRequestTeamCompleted</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>ReconfirmRequestDate__c</columns>
    <columns>ReconfirmDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReconfirmRequestTeam__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ReconfirmRequestDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ReconfirmDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>DecisionApplicationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>再査担当チームリストビュー(完了)</label>
</ListView>