force-app/main/default/objects/Change__c/listViews/CompleteChangeRealEstate.listView-meta.xml
<ListView>
    <fullName>CompleteChangeRealEstate</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>NewResidentName__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>LeftEmployee__c</columns>
    <columns>LeaveScheduledDate__c</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>完了</value>
    </filters>
    <label>完了した入替手続き(不動産会社)</label>
</ListView>