force-app/main/default/objects/Change__c/listViews/DataManagementQueue_Change.listView-meta.xml
<ListView>
    <fullName>DataManagementQueue_Change</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>RealEstate__c</columns>
    <columns>Account__c</columns>
    <columns>NewResidentName__c</columns>
    <columns>MoveScheduledDate__c</columns>
    <columns>LeftEmployee__c</columns>
    <columns>LeaveScheduledDate__c</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <filterScope>Queue</filterScope>
    <label>データ管理チーム</label>
    <queue>DataManagementQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>