force-app/main/default/objects/Change__c/listViews/ProgressChange.listView-meta.xml
<ListView>
    <fullName>ProgressChange</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <label>進行中の入替手続き(企業社員)</label>
</ListView>