force-app/main/default/objects/Change__c/listViews/RelatedChangeStatus.listView-meta.xml
<ListView>
    <fullName>RelatedChangeStatus</fullName>
    <columns>NAME</columns>
    <columns>RelationResident__c</columns>
    <columns>RelationMoveDate__c</columns>
    <columns>RelationLeftEmployee__c</columns>
    <columns>RelationLeaveDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RelatedChange__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>関連入替状況</label>
</ListView>