force-app/main/default/objects/Change__c/listViews/RetiredPersonDataRenewalTargetChange.listView-meta.xml
<ListView>
    <fullName>RetiredPersonDataRenewalTargetChange</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>IsRetireExpectedPersonReminder__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsRetireExpectedPersonReminder__c</field>
        <operation>equals</operation>
        <value>データ修正</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Change__c.Leave</value>
    </filters>
    <label>退職者_データ更新対象</label>
</ListView>