force-app/main/default/objects/Change__c/listViews/RetiredPersonFeasibilityConfirmChange.listView-meta.xml
<ListView>
    <fullName>RetiredPersonFeasibilityConfirmChange</fullName>
    <columns>NAME</columns>
    <columns>RealEstate__c</columns>
    <columns>LeftEmployee__c</columns>
    <columns>IsRetireExpectedPersonReminder__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsRetireExpectedPersonReminder__c</field>
        <operation>equals</operation>
        <value>督促可否確認</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>完了</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Change__c.Leave</value>
    </filters>
    <label>退職者_退去申請督促可否確認</label>
</ListView>